tests/snapshots/snapshots__budget_thiserror_src_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (993 tokens)

aserror.rs
     4→#[doc(hidden)]
     5→pub trait AsDynError<'a>: Sealed {
     6→    fn as_dyn_error(&self) -> &(dyn Error + 'a);
    10→    #[inline]
    11→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    17→    #[inline]
    18→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    24→    #[inline]
    25→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    31→    #[inline]
    32→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    38→    #[inline]
    39→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    44→#[doc(hidden)]
    45→pub trait Sealed {}

display.rs
     3→use std::path::{self, Path, PathBuf};
     5→#[doc(hidden)]
     6→pub trait AsDisplay<'a>: Sealed {
     7→    // TODO: convert to generic associated type.
     8→    // https://github.com/dtolnay/thiserror/pull/253
     9→    type Target: Display;
    10→
    11→    fn as_display(&'a self) -> Self::Target;
    18→    type Target = &'a T;
    20→    fn as_display(&'a self) -> Self::Target {
    21→        *self
    22→    }
    25→#[cfg(feature = "std")]
    26→impl<'a> AsDisplay<'a> for Path {
    27→    type Target = path::Display<'a>;
    29→    #[inline]
    30→    fn as_display(&'a self) -> Self::Target {
    35→#[cfg(feature = "std")]
    36→impl<'a> AsDisplay<'a> for PathBuf {
    37→    type Target = path::Display<'a>;
    39→    #[inline]
    40→    fn as_display(&'a self) -> Self::Target {
    45→#[doc(hidden)]
    46→pub trait Sealed {}
    48→#[cfg(feature = "std")]
    49→impl Sealed for Path {}
    50→#[cfg(feature = "std")]
    51→impl Sealed for PathBuf {}
    58→#[cfg(not(feature = "std"))]
    59→mod placeholder {
    60→    use super::{AsDisplay, Sealed};
    63→    #[allow(dead_code)]
    64→    pub struct Placeholder;
    67→        type Target = Self;
    69→        #[inline]
    70→        fn as_display(&'a self) -> Self::Target {
    76→        fn fmt(&self, _formatter: &mut fmt::Formatter) -> fmt::Result {
    77→            unreachable!()
    78→        }

lib.rs
   281→mod aserror;
   282→mod display;
   283→#[cfg(error_generic_member_access)]
   284→mod provide;
   285→mod var;
   287→pub use thiserror_impl::*;
   289→mod private;

private.rs
     2→pub use crate::aserror::AsDynError;
     4→pub use crate::display::AsDisplay;
     7→pub use crate::provide::ThiserrorProvide;
     9→pub use crate::var::Var;
    11→pub use core::error::Error;
    14→pub use std::backtrace::Backtrace;

provide.rs
     3→#[doc(hidden)]
     4→pub trait ThiserrorProvide: Sealed {
     5→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>);
    12→    #[inline]
    13→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>) {
    18→#[doc(hidden)]
    19→pub trait Sealed {}

var.rs
     3→pub struct Var<'a, T: ?Sized>(pub &'a T);
     6→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
     7→        Pointer::fmt(self.0, formatter)
     8→    }
