tests/snapshots/snapshots__budget_thiserror_src_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1570 tokens)

aserror.rs
     1→use core::error::Error;
     2→use core::panic::UnwindSafe;
     4→#[doc(hidden)]
     5→pub trait AsDynError<'a>: Sealed {
     6→    fn as_dyn_error(&self) -> &(dyn Error + 'a);
     9→impl<'a, T: Error + 'a> AsDynError<'a> for T {
    10→    #[inline]
    11→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    12→        self
    13→    }
    16→impl<'a> AsDynError<'a> for dyn Error + 'a {
    17→    #[inline]
    18→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    19→        self
    20→    }
    23→impl<'a> AsDynError<'a> for dyn Error + Send + 'a {
    24→    #[inline]
    25→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    26→        self
    27→    }
    30→impl<'a> AsDynError<'a> for dyn Error + Send + Sync + 'a {
    31→    #[inline]
    32→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    33→        self
    34→    }
    37→impl<'a> AsDynError<'a> for dyn Error + Send + Sync + UnwindSafe + 'a {
    38→    #[inline]
    39→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    40→        self
    41→    }
    44→#[doc(hidden)]
    45→pub trait Sealed {}
    46→impl<T: Error> Sealed for T {}
    47→impl Sealed for dyn Error + '_ {}
    48→impl Sealed for dyn Error + Send + '_ {}
    49→impl Sealed for dyn Error + Send + Sync + '_ {}
    50→impl Sealed for dyn Error + Send + Sync + UnwindSafe + '_ {}

display.rs
     1→use core::fmt::Display;
     3→use std::path::{self, Path, PathBuf};
     5→#[doc(hidden)]
     6→pub trait AsDisplay<'a>: Sealed {
     7→    // TODO: convert to generic associated type.
     8→    // https://github.com/dtolnay/thiserror/pull/253
     9→    type Target: Display;
    10→
    11→    fn as_display(&'a self) -> Self::Target;
    14→impl<'a, T> AsDisplay<'a> for &T
    15→where
    16→    T: Display + ?Sized + 'a,
    17→{
    18→    type Target = &'a T;
    20→    fn as_display(&'a self) -> Self::Target {
    21→        *self
    22→    }
    25→#[cfg(feature = "std")]
    26→impl<'a> AsDisplay<'a> for Path {
    27→    type Target = path::Display<'a>;
    29→    #[inline]
    30→    fn as_display(&'a self) -> Self::Target {
    31→        self.display()
    32→    }
    35→#[cfg(feature = "std")]
    36→impl<'a> AsDisplay<'a> for PathBuf {
    37→    type Target = path::Display<'a>;
    39→    #[inline]
    40→    fn as_display(&'a self) -> Self::Target {
    41→        self.display()
    42→    }
    45→#[doc(hidden)]
    46→pub trait Sealed {}
    47→impl<T: Display + ?Sized> Sealed for &T {}
    48→#[cfg(feature = "std")]
    49→impl Sealed for Path {}
    50→#[cfg(feature = "std")]
    51→impl Sealed for PathBuf {}
    58→#[cfg(not(feature = "std"))]
    59→mod placeholder {
    60→    use super::{AsDisplay, Sealed};
    61→    use core::fmt::{self, Display};
    63→    #[allow(dead_code)]
    64→    pub struct Placeholder;
    66→    impl<'a> AsDisplay<'a> for Placeholder {
    67→        type Target = Self;
    69→        #[inline]
    70→        fn as_display(&'a self) -> Self::Target {
    71→            Placeholder
    72→        }
    75→    impl Display for Placeholder {
    76→        fn fmt(&self, _formatter: &mut fmt::Formatter) -> fmt::Result {
    77→            unreachable!()
    78→        }
    81→    impl Sealed for Placeholder {}

lib.rs
   281→mod aserror;
   282→mod display;
   283→#[cfg(error_generic_member_access)]
   284→mod provide;
   285→mod var;
   287→pub use thiserror_impl::*;
   289→mod private;

private.rs
     2→pub use crate::aserror::AsDynError;
     4→pub use crate::display::AsDisplay;
     7→pub use crate::provide::ThiserrorProvide;
     9→pub use crate::var::Var;
    11→pub use core::error::Error;
    14→pub use std::backtrace::Backtrace;

provide.rs
     1→use core::error::{Error, Request};
     3→#[doc(hidden)]
     4→pub trait ThiserrorProvide: Sealed {
     5→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>);
     8→impl<T> ThiserrorProvide for T
     9→where
    10→    T: Error + ?Sized,
    11→{
    12→    #[inline]
    13→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>) {
    14→        self.provide(request);
    15→    }
    18→#[doc(hidden)]
    19→pub trait Sealed {}
    20→impl<T: Error + ?Sized> Sealed for T {}

var.rs
     1→use core::fmt::{self, Pointer};
     3→pub struct Var<'a, T: ?Sized>(pub &'a T);
     5→impl<'a, T: Pointer + ?Sized> Pointer for Var<'a, T> {
     6→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
     7→        Pointer::fmt(self.0, formatter)
     8→    }
